@@ -91,9 +91,14 @@ class FarmConfig(DefaultConfig):
     # backup it.
     data_underlay_dir = './underlay/'
 
-    # This must be '/wiki' for twisted and standalone. For CGI, it should
-    # match your Apache Alias setting.
-    url_prefix = '/wiki'
+    # The URL prefix we use to access the static stuff (img, css, js).
+    # NOT touching this is maybe the best way to handle this setting as moin
+    # uses a good internal default (something like '/moin_static160' for moin
+    # version 1.6.0).
+    # For Twisted and standalone server, the default will automatically work.
+    # For others, you should make a matching server config (e.g. an Apache
+    # Alias definition pointing to the directory with the static stuff).
+    #url_prefix_static = '/moin_static160'
 
 
     # Security ----------------------------------------------------------
