@@ -38,6 +38,11 @@ class Config(StandaloneConfig):
     # If you installed with --prefix=PREFIX, use 'PREFIX/share/moin/wiki/htdocs'
     docs = '/usr/share/moin/htdocs'
 
+    # URL prefix for the static stuff (used to access stuff in docs) - you
+    # usually should not need to change this because moin standalone uses
+    # matching defaults for here and for wikiconfig.py:
+    #url_prefix_static = '/moin_static160'
+
     # The server will run with as this user and group (default 'www-data')
     user = 'www-data'
     group = 'www-data'
